--- a/_posts/2009-12-16-pyango-view.textile
+++ b/_posts/2009-12-16-pyango-view.textile
@@ -18,7 +18,7 @@ This post is split into two sections. The first is the story of trying to get Ur
 
 h2. The Story
 
-Omar Zaiden and Chris (CCB) both had the idea to deter cheating in human aided translational tools by not using actual text. Instead, print the text into an image, similar to how a captcha uses images of text as a are-you-human test. Cheaters, often times, will cut n paste the text into translation tools to do the job without being able to actually speak the language correctly. This is made harder by not letting one cut n paste the text.
+Omar Zaiden and Chris (CCB) both had the idea to deter cheating in human aided translational tools by not using actual text. Instead, print the text into an image, similar to how a captcha uses images of text as a <i>are-you-human</i> test. Cheaters, often times, will cut n paste the text into translation tools to do the job without being able to actually speak the language correctly. This is made harder by not letting one cut n paste the text.
 
 p(meta). Imagemagick and PIL
 
