--- a/_posts/2009-12-20-peter-norvig-scientific-computing.textile
+++ b/_posts/2009-12-20-peter-norvig-scientific-computing.textile
@@ -11,6 +11,17 @@ p(meta). 20 December 2009 - James - Brooklyn
 
 Peter Norvig explains why he came to Python. Quite simply, it looked a lot like pseudo-code and his students couldn't understand LISP. There's clearly more to it, but it's his to explain.
 
+While speaking, he covers his views on the goals of scientific computing and lists a couple software projects under machine learning.
+
+<a href="/images/2009-12-20-peter-norvig-scientific-computer/scientific_computing.png"><img src="/images/2009-12-20-peter-norvig-scientific-computer/shrunk/scientific_computing.png"></a>
+
+* Weka - <a href="http://kogs-www.informatik.uni-hamburg.de/~meine/weka-python/">http://kogs-www.informatik.uni-hamburg.de/~meine/weka-python/</a>
+*BNT - Bayes Network Toolkit? (<a href="mailto:jd@j2labs.net?subject=bnt">does anyone know?</a>)
+* Orange - <a href="http://www.ailab.si/orange/">http://www.ailab.si/orange/</a>
+* PyML - <a href="http://pyml.sourceforge.net/">http://pyml.sourceforge.net/</a>
+
+
+
 --
 
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/us/80x15.png" /></a>
