strong argument for python

--- a/_posts/2009-12-20-peter-norvig-scientific-computing.textile
+++ b/_posts/2009-12-20-peter-norvig-scientific-computing.textile
@@ -34,6 +34,7 @@ Peter worked with a team that could detect diseases <i>about a week or two faste
 
 <a href="/images/2009-12-20-peter-norvig-scientific-computing/detect_flu.png"><img src="/images/2009-12-20-peter-norvig-scientific-computing/shrunk/detect_flu.png"></a>
 
+Of Python, Peter says, <i>"It's just a few lines to parse the maze into a set of states and then you set up these three tables of probabailities that the hidden markov model needs. You need a distribution over the start state and I just said that's uniform, you can start anywhere. You need the transitions, which are the observations and I define the observation function as the four walls around it. And so that was very nice that in this half a page of code I was able to go from this model parsing the representation of the room and get it into the form it needed and in other languages that would've been 3 or 4 pages instead of half a page. So that was ideal."</i>
 
 --
 
